--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
+    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
